--- a/index.htm
+++ b/index.htm
@@ -966,7 +966,9 @@
                     <ul class="footer-links">
                         <li><a href="#">Industrial Ceramics</a></li>
                         <li><a href="#">Dental Ceramic</a></li>
+                        <li><a href="#">Dental Lithium Disilicate</a></li>
                         <li><a href="#">Dental Zirconia Accessories</a></li>
+                        <li><a href="#">Dental Accessories</a></li>
                         <li><a href="#">Other Accessories</a></li>
                     </ul>
                 </div>
